crates/cyrs-sema/src/snapshots/cyrs_sema__resolve__tests__scope_unresolved_ref.snap
---
source: crates/cyrs-sema/src/resolve.rs
expression: "render_src(\"MATCH (n) RETURN z\")"
---
scopes: 3
  scope[0] kind=Root parent=None bindings=[]
  scope[1] kind=Match parent=Some(0) bindings=["n"]
  scope[2] kind=Return parent=Some(1) bindings=[]
diagnostics: 1
  E1001: unresolved variable `z`
